--- a/src/container/Home/SideBar/SideBar.css
+++ b/src/container/Home/SideBar/SideBar.css
@@ -2,12 +2,12 @@
   height: 100%; }
   .left_home_section .most_liked_post h4 {
     color: #3F8AB8;
-    cursor: pointer;
     text-transform: uppercase;
     font-size: 16px;
     font-weight: bold; }
   .left_home_section .most_liked_post .carousel_item {
-    position: relative; }
+    position: relative;
+    cursor: pointer; }
     .left_home_section .most_liked_post .carousel_item .carousel_image_wrapper {
       display: inline-block;
       position: relative;
