--- a/src/container/Home/SideBar/SideBar.scss
+++ b/src/container/Home/SideBar/SideBar.scss
@@ -26,6 +26,9 @@
         img {
           width: 100%;
           border-radius: 40px;
+          height: 100%;
+          min-height: 380px;
+          object-fit: cover;
         }
       }
 
@@ -45,10 +48,11 @@
         content: "";
         width: 100%;
         bottom: 0;
-        background: -webkit-linear-gradient(bottom, black 0%, rgba(0, 0, 0, 0.53) 31%, #0d1b51a6 32%, rgba(22, 37, 80, 0.58) 41%, rgba(28, 41, 76, 0.39) 61%, rgba(31, 42, 73, 0.19) 81%, rgba(64, 64, 64, 0.02) 99%);
         height: 100px;
-        border-bottom-right-radius: 40px;
-        border-bottom-left-radius: 40px;
+        border-top-right-radius: 40px;
+        border-top-left-radius: 40px;
+        background: -webkit-linear-gradient(top, rgba(18, 35, 81, 0.6) 28%, rgba(24, 37, 79, 0.43) 48%, rgba(30, 42, 77, 0.33) 68%, rgba(35, 42, 71, 0.14) 89%, rgba(28, 57, 57, 0.04) 100%);
+        transform: rotate(180deg);
       }
 
 
