--- a/src/container/Profile/ProfileHeader/ProfileHeader.scss
+++ b/src/container/Profile/ProfileHeader/ProfileHeader.scss
@@ -24,7 +24,7 @@
 
 
   .profile_img {
-    cursor: pointer;
+    border-radius: 100px;
   }
 
 
@@ -33,6 +33,11 @@
   }
 
   .follower_stats {
+    .user_stats {
+      h5 {
+        cursor: pointer;
+      }
+    }
     div {
       margin: 0;
       width: 13%;
@@ -51,7 +56,8 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    input {
+    max-width: 500px;
+    input[type="text"] {
       float: left;
       width: 400px;
       padding: 0 80px 0 30px;
@@ -60,7 +66,7 @@
     button {
       width: 20%;
       position: absolute;
-      right: -15px;
+      right: 2px;
       height: 50px;
     }
   }
