--- a/src/container/FoodDetail/FoodDetail.scss
+++ b/src/container/FoodDetail/FoodDetail.scss
@@ -22,7 +22,7 @@
     width: 100%;
     height: 100%;
     border-radius: 4px;
-    padding: 27px 0;
+    padding: 27px 12px;
     background: #f0f2f8;
     display: flex;
     border: 1px solid #f0f2f8;
@@ -31,8 +31,9 @@
 
     .food_items_stats {
       text-align: center;
+      max-width: 200px;
       h4 {
-        font-size: 18px;
+        font-size: 14px;
         font-weight: bold;
       }
       p {
