--- a/src/container/Profile/ProfileHeader/ProfileHeader.scss
+++ b/src/container/Profile/ProfileHeader/ProfileHeader.scss
@@ -57,6 +57,39 @@
     justify-content: center;
     margin-top: 20px;
     max-width: 500px;
+    .file_input {
+      width: 0.1px;
+      height: 0.1px;
+      opacity: 0;
+      overflow: hidden;
+      position: absolute;
+      z-index: -1;
+    }
+    .file_label {
+      cursor: pointer;
+      display: inline-flex;
+      align-items: center;
+      border-radius: 4px;
+      font-size: 14px;
+      font-weight: 600;
+      color: #000;
+      padding: 10px 12px;
+
+      svg {
+        height: 16px;
+        margin-right: 4px;
+      }
+    }
+    .image_preview {
+      display: flex;
+      list-style-type: none;
+      li {
+        max-width: 100px;
+        padding: 10px;
+        border-radius: 8px;
+        background: #e6f4ff;
+      }
+    }
     input[type="text"] {
       float: left;
       width: 400px;
