--- a/src/component/Post/Post.scss
+++ b/src/component/Post/Post.scss
@@ -34,7 +34,12 @@
   }
   .comment_show{
     display: flex;
-
+    align-items: center;
+    justify-content: space-between;
+    
+    .delete {
+      cursor: pointer;
+    }
     img{
       width: 50px;
       height: 50px;
