--- a/src/component/Header/MessageBox/MessageBox.scss
+++ b/src/component/Header/MessageBox/MessageBox.scss
@@ -47,7 +47,11 @@
     align-items: center;
     .badge {
       color: white;
-      background-color: $primary !important;
+      background-color: #3F8AB8 !important;
+      margin-left: 10px;
+      border-radius: 100px;
+      width: 20px;
+      height: 20px;
     }
   }
 
