--- a/src/container/Setting/Setting.scss
+++ b/src/container/Setting/Setting.scss
@@ -5,6 +5,8 @@
     height: 100vh;
     .profile_change {
       margin-top: 20px;
+
+
       img {
         border-radius: 50%;
       }
@@ -92,4 +94,25 @@
 
   }
 }
+
+
+  .file_input {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+  }
+  .file_label {
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    border-radius: 4px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #000;
+    padding: 10px 12px;
+  }
+
 
