--- a/src/component/Header/MessageBox/MessageBox.scss
+++ b/src/component/Header/MessageBox/MessageBox.scss
@@ -75,6 +75,13 @@
   display: none
 }
 
-
+#unseen_badge{
+  background: #3F8AB8;
+  color: #fff;
+  width: 20px;
+  height: 20px;
+  border-radius: 100px;
+  padding: 4px;
+}
 
 
