--- a/src/component/Header/MessageBox/MessageBox.scss
+++ b/src/component/Header/MessageBox/MessageBox.scss
@@ -10,6 +10,10 @@
   box-shadow: 3px 6px 12px 3px rgba(0,0,0,0.10);
   -webkit-box-shadow: 3px 6px 12px 3px rgba(0,0,0,0.10);
   -moz-box-shadow: 3px 6px 12px 3px rgba(0,0,0,0.10);
+  .view_all {
+    font-size: 12px;
+    color: $primary;
+  }
   h4 {
     font-size: 17px;
     color: $primary;
