--- a/src/component/Header/NotificationBox/NotificationBox.scss
+++ b/src/component/Header/NotificationBox/NotificationBox.scss
@@ -16,6 +16,11 @@
     color: $primary;
   }
 
+  .view_all {
+    font-size: 12px;
+    color: $primary;
+  }
+
   .notification_box_item {
     display: flex;
     align-items: center;
