--- a/src/component/Post/Post.scss
+++ b/src/component/Post/Post.scss
@@ -36,11 +36,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+
     .delete {
       cursor: pointer;
     }
-    img{
+    .avatar {
       width: 50px;
       height: 50px;
       border-radius: 100px;
