--- a/src/component/Posts/Posts.css
+++ b/src/component/Posts/Posts.css
@@ -40,4 +40,4 @@
     .post_comment .comment_show .comment_detail p {
       font-size: 12px; }
 
-/*# sourceMappingURL=Post.css.map */
+/*# sourceMappingURL=Posts.css.map */
