--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
 
 body {
   margin: 0;
+  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
