Bug Fixes Added all notification page

--- a/src/component/Header/NotificationBox/NotificationBox.scss
+++ b/src/component/Header/NotificationBox/NotificationBox.scss
@@ -16,6 +16,10 @@
     color: $primary;
   }
 
+  .no_notification {
+    font-size: 12px;
+  }
+
   .view_all {
     font-size: 12px;
     color: $primary;
