--- a/src/container/Chat/ChatBox/ChatBox.scss
+++ b/src/container/Chat/ChatBox/ChatBox.scss
@@ -14,7 +14,8 @@
     padding: 0 20px;
     &-dp{
       border-radius: 50%;
-      height: 70%;
+      height: 50px;
+      width: 50px;
     }
   }
 }
