--- a/src/component/Header/MessageBox/MessageBox.scss
+++ b/src/component/Header/MessageBox/MessageBox.scss
@@ -10,6 +10,9 @@
   box-shadow: 3px 6px 12px 3px rgba(0,0,0,0.10);
   -webkit-box-shadow: 3px 6px 12px 3px rgba(0,0,0,0.10);
   -moz-box-shadow: 3px 6px 12px 3px rgba(0,0,0,0.10);
+  .no_message {
+    font-size: 12px;
+  }
   .view_all {
     font-size: 12px;
     color: $primary;
@@ -22,7 +25,7 @@
   .message_box_item {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     border-top: 1px solid #F1F1F3;
     padding-top: 17px;
     margin-top: 17px;
@@ -33,8 +36,11 @@
       font-size: 12px;
     }
     .message_box_message {
+      width: 185px;
+      height: 30px;
       h5 {
-        font-size: 16px;
+        font-size: 13px;
+        font-weight: bold;
         padding: 0;
         margin: 0;
       }
