--- a/src/component/Header/SearchBar/SearchBar.scss
+++ b/src/component/Header/SearchBar/SearchBar.scss
@@ -66,6 +66,9 @@
       padding: 20px;
       margin-bottom: 12px;
       border-bottom: 0.5px solid rgba(0, 0, 0, 0.25);
+      img {
+        border-radius: 50%;
+      }
       p {
         padding: 0;
         margin: 0 0 0 20px;
