--- a/src/container/Home/SideBar/TopAccounts/TopAccount/TopAccount.scss
+++ b/src/container/Home/SideBar/TopAccounts/TopAccount/TopAccount.scss
@@ -14,7 +14,8 @@
     display: flex;
     flex-flow: wrap;
     img {
-      border-radius: 100px;
+      border-radius: 50%;
+      object-fit: cover;
       cursor: pointer;
     }
     p {
