--- a/src/container/Queries/Queries.scss
+++ b/src/container/Queries/Queries.scss
@@ -117,7 +117,8 @@
       img{
         width: 40px;
         height: 40px;
-        border-radius: 100px;
+        border-radius: 50%;
+        object-fit: cover
       }
 
       p{
