--- a/src/component/Posts/Posts.scss
+++ b/src/component/Posts/Posts.scss
@@ -43,7 +43,8 @@
     .avatar {
       width: 50px;
       height: 50px;
-      border-radius: 100px;
+      object-fit: cover;
+      border-radius: 50px;
       margin-right: 10px;
     }
 
