--- a/src/container/CalorieTracker/CalorieTracker.scss
+++ b/src/container/CalorieTracker/CalorieTracker.scss
@@ -43,7 +43,9 @@
     color: #000;
     border: 1px solid #f0f2f8;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
-
+    &:hover {
+      background: #2196F3;
+    }
   }
 }
 
