--- a/src/container/Queries/QueriesModal/QueriesModal.scss
+++ b/src/container/Queries/QueriesModal/QueriesModal.scss
@@ -51,7 +51,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 5px 5px 0 0;
+        margin: 0 5px 0 0;
       }
       p{
         display: flex;
