Changed post_img border radius

--- a/src/container/Home/Feed/Feed.scss
+++ b/src/container/Home/Feed/Feed.scss
@@ -74,8 +74,7 @@
   .activity_feed_post {
     .post_img {
       img {
-        object-fit: cover;
-        border-radius: 50%;
+        border-radius: 17px;
       }
     }
     .activity_feed_user {
