Change text in calorie tracker page

--- a/src/container/CalorieTracker/CalorieTracker.scss
+++ b/src/container/CalorieTracker/CalorieTracker.scss
@@ -29,6 +29,14 @@
 
 }
 
+.my_graph_btn {
+  color: $primary;
+  text-align: center;
+  background-color: $primary;
+  border-radius: 12px;
+  font-size: 20px;
+}
+
 .calorie_tracker_button{
   display: flex;
   justify-content: center;
