--- a/src/container/Notification/Notification.scss
+++ b/src/container/Notification/Notification.scss
@@ -43,7 +43,7 @@
         width: 50px;
         height: 50px;
         max-width: 100%;
-        object-fit: contain;
+        object-fit: cover;
         border-radius: 100%;
       }
 
